--- a/style.css
+++ b/style.css
@@ -26,12 +26,77 @@
     display: flex;
     list-style: none;
     margin: 40px;
-    width: 80%;
+    width: 70%;
 }
 
 .ul1 li{
     padding:30px;
     font-size: 25px;
     font-family: Arial, Helvetica, sans-serif;
-    color: white;
+    color: #F7EDE8;
+    cursor: pointer;
+}
+
+.ul1 li:hover{
+    transform: scale(1.1);
+    transition: 500ms;
+}
+
+.main-container {
+    background-color: rgba(108, 179, 69, 1);
+    width: 100%;
+    height: 750px;
+}
+
+.heading1{
+    width: 488px;
+    height: 180px;
+    top: 176px;
+    left: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    font-size: 96px;
+    line-height: 100px;
+    letter-spacing: 0%;
+    color: #F7EDE8;
+    position: absolute;
+}
+
+.info1{
+    width: 488px;
+    height: 42px;
+    top: 386px;
+    left: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold, 700;
+    font-size: 21px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    position: absolute;
+    color: #F7EDE8;
+}
+
+.btn1{
+    position: absolute;
+    width: 200px;
+    height: 55px;
+    top: 470px;
+    left: 100px;
+    background-color: #5740C0;
+    border: 0;
+    font-size: 21px;
+    color: #F7EDE8;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+}
+
+.btn1:hover{
+    background-color: #3d2c87;
+    transition: 500ms ease;
+    transform: scale(1.1);
+}
+
+.btn1:active{
+    background-color: #2a1f5a;
 }
