--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     align-items: center;
     justify-content: space-between;
     position: fixed;
+    z-index: 1;
 }
 
 .logo{
@@ -46,6 +47,10 @@
     background-color: rgba(108, 179, 69, 1);
     width: 100%;
     height: 750px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding-top: 100px;
 }
 
 .heading1{
@@ -99,4 +104,31 @@
 
 .btn1:active{
     background-color: #2a1f5a;
+}
+
+.main-container2 {
+  position: relative;
+  width: 100%;
+  height: 400px;        
+  background: white;     
+  overflow: hidden;  
+     
+}
+
+
+.wave {
+  position: absolute;
+  top: 0;        
+  left: 0;
+  width: 100%;     
+  height: 150px;  
+  transform: none; 
+}
+
+.cur-tapancik1{
+    height: 400px;
+    width: 400px;
+    background-color: rgba(247, 237, 232, 1);
+    opacity: 0.2;
+    
 }
