--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@
 .main-container {
     background-color: rgba(108, 179, 69, 1);
     width: 100%;
-    height: 750px;
+    height: 500px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -130,5 +130,80 @@
     width: 400px;
     background-color: rgba(247, 237, 232, 1);
     opacity: 0.2;
-    
+
+}
+
+.Drones {
+    width: 800px;
+    height: 58px;
+    top: 750px;
+    left: 100px;
+    font-size: 64px;
+    color: #5740C0;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 100%;
+    letter-spacing: 0%;
+    position: absolute;
+}
+
+.info2 {
+    width: 800px;
+    height: 227px;
+    top: 870px;
+    left: 100px;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    line-height: 25.6px;
+    letter-spacing: 0%;
+    position: absolute;
+    color: #5740C0;
+}
+
+.info3 {
+    width: 800px;
+    height: 227px;
+    top: 1000px;
+    left: 100px;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    line-height: 25.6px;
+    letter-spacing: 0%;
+    position: absolute;
+    color: #5740C0;
+}
+
+.info4 {
+    width: 800px;
+    height: 227px;
+    top: 1160px;
+    left: 100px;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    line-height: 25.6px;
+    letter-spacing: 0%;
+    position: absolute;
+    color: #5740C0;
+}
+
+.main-container4 {
+    background-color: #5740C0;
+    width: 100%;
+    height: 663px;
+    top: 1360px;
+    position: absolute;
+}
+
+.vernagir {
+    width: 660px;
+    height: 80px;
+    top: 90px;
+    left: 435px;
+    position: absolute;
+    text-align: center;
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #F7EDE8;
 }
