--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body{
     background-repeat: no-repeat;
     background-size: contain;
     margin-left: 40px;
+    margin-top: 30px;
 }
 
 .logo:hover{
@@ -239,4 +240,68 @@ body{
 
 .footericons a{
     color: white;
+}
+
+.main-container5 {
+    width: 100%;
+    height: 1000px;
+    padding: 100px;
+}
+
+.vernagir2 {
+    width: 540px;
+    height: 97px;
+    top: 2213px;
+    font-size: 48px;
+    color: #5740C0;
+    margin-bottom: 10px;
+    left: 100px;
+}
+
+.info5{
+    max-width: 800px;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 25.6px;
+    color: #5740C0;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.p2 {
+    font-size: 20px;
+    padding-bottom: 10px;
+    color: #5740C0;
+    margin-bottom: 10px;
+}
+
+.footer2 {
+    width: 100%;
+    height: 78px;
+    top: 4234px;
+    background-color: #6CB345;
+    position: absolute;
+}
+
+.info6 {
+    width: 310px;
+    height: 35px;
+    font-size: 20px;
+    font-weight: 500;
+    left: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #F7EDE8;
+    position: absolute;
+    top: 28px;
+}
+
+.logo2 {
+    background-image: url(images/Layer_1-3.png);
+    width: 74.7218017578125px;
+    height: 111.64305114746094px;
+    top: -85px;
+    left: 360px;
+    opacity: 1;
+    color: #6CB345;
+    position: absolute;
 }
