--- a/Home.css
+++ b/Home.css
@@ -143,3 +143,31 @@ body{
     position: relative;
     transform: rotate(340deg);
 }
+
+.main-container3{
+    width: 100%;
+    padding: 100px;
+    background-color: #F7EDE8;
+    margin-top: -200px;
+}
+
+.Services{
+    font-size: 64px;
+    color: #5740C0;
+    margin-bottom: 30px;
+}
+
+.Services:hover{
+    transform: scale(1.1);
+    transition: 0.5s;
+    padding-left: 53px;
+}
+
+.info2{
+    max-width: 800px;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 25.6px;
+    color: #5740C0;
+    margin-bottom: 20px;
+}
